# conveyor

./: .coverage  .gitignore  LICENSE  README.md  example_conveyor.py  example_transformer_usage.py  isXml.py  log.txt  pyproject.toml  setup.py  test.py
.github/workflows/: complexity.yml  coverage.yml  lint.yml  tests.yml  typing.yml
benchmarks/: benchmark_default.json  benchmark_digest.py  common.py  test_compression.py  test_digest.py
conveyor/: Command.py  ComplexDataProvider.py  ComplexInputProvider.py  Creator.py  DataProvider.py  DbItemType.py  DbItemTypeInterface.py  DefaultItemRepository.py  InputProvider.py  Item.py  ItemRepository.py  ItemRepositoryEffect.py  ItemRepositoryLogger.py  ItemRepository_.py  ItemType.py  ItemTypeInterface.py  ItemsProcessor.py  ItemsReceiver.py  LogsRepository.py  Model.py  Mover.py  OutputProvider.py  Processor.py  Receiver.py  Repository.py  RepositoryEffect.py  Transaction.py  Transformer.py  __init__.py
tests/: FileSaver.py  ItemDestroyer.py  PersonalizationRequestToCreatedMover.py  ToPersonalizationRequestMover.py  Typer.py  XmlVerifier.py  common.py  example_file.xml  example_workers.py  isXml.py  test_Chain.py  test_Created.py  test_Creator.py  test_Data.py  test_DbItemTypeInterface.py  test_DefaultItemRepository.py  test_Digest.py  test_ExceptionDbLogging.py  test_ExceptionLogging.py  test_Files.py  test_Files_Core.py  test_Filows.py  test_Item.py  test_ItemTypeInterface.py  test_Joint.py  test_Receiver.py  test_Repository.py  test_Rows.py  test_Rows_Core.py  test_Transformer.py  test_Treegress.py  test_pipeline.py
(+234 files in other folders)
