[tool.poetry]
name = "conveyor"
version = "1.2.0"
description = ""
authors = ["necheporenko_s_iu <neceporenkostepan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
blake3 = "0.3.1"
logama = "^0.1.0"
peewee = "^3.14.8"
growing-tree-base = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
